fix spacing

--- a/src/app/components/how-it-work-section/styles.css
+++ b/src/app/components/how-it-work-section/styles.css
@@ -14,7 +14,7 @@
 }
 .how-it-works-cards-wrapper img {
   min-height: 285px;
-  margin-bottom: 35px;
+  margin-bottom: 15px;
   margin-inline: auto;
 }
 
